# 2D_Mosaic_Sim

./: .gitignore  README.md  cylinder_PDF.py  detector_mosaic_ewald_view.py  fibrous_bragg_ewald_intersections.py  fibrous_simulator.py  mono_simulator.py  mosaic_simulator.py  pyproject.toml  simulate_cylinder.py  simulate_cylinder_live.py  simulate_cylinder_pdf.py  simulate_detector.py  simulate_mosaic.py  simulate_screen.py  single_crystal_powder_cylinder_viewer.py  special_cause_matrix_cells.py  specular_reflection_sim.py  tatus
.github/workflows/: ci.yml
assets/: specular_ui.css
docs/decisions/: 001-special-cause-matrix-export.md  001-special-cause-reciprocal-and-bandwidth.md
docs/launch/: 2026-05-13-special-cause-matrix-export.md
mosaic_sim/: # azimuthal_rotation_with_ewald_sphere.py  __init__.py  animation.py  common.py  constants.py  cylinder.py  cylinder_pdf.py  detector.py  geometry.py  intensity.py  mono.py  screen.py  unified.py  unified_app.py
mosaic_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cylinder.py  test_detector.py  test_kernels.py  test_mono.py  test_special_cause_matrix_cells.py  test_specular_reflection_sim.py  test_unified.py  test_unified_app.py
