[project]
name = "mosaic_sim"
version = "0.1.0"
description = "Rocking-curve and detector simulations for Bi2Se3 mosaics"
requires-python = ">=3.11"
dependencies = ["plotly>=6.0", "numba>=0.59", "numpy>=1.26", "dash>=2.0"]

[project.scripts]
mosaic-simulator = "mosaic_sim.unified:main"
mosaic-single-crystal-powder-cylinder-viewer = "mosaic_sim.mono:main"
mosaic-detector-mosaic-ewald-view = "mosaic_sim.detector:main"
mosaic-fibrous-bragg-ewald-intersections = "mosaic_sim.cylinder:main"
