[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic_sim"
version = "0.1.0"
description = "Rocking-curve and detector simulations for Bi2Se3 mosaics"
requires-python = ">=3.11"
dependencies = ["dash>=2.4", "numba>=0.59", "numpy>=1.26", "plotly>=6.0"]

[project.scripts]
mosaic-simulator = "mosaic_sim.unified:main"
mosaic-single-crystal-powder-cylinder-viewer = "mosaic_sim.mono:main"
mosaic-detector-mosaic-ewald-view = "mosaic_sim.detector:main"
mosaic-fibrous-bragg-ewald-intersections = "mosaic_sim.cylinder:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["mosaic_sim"]
py-modules = ["specular_reflection_sim"]
